Squashed commit of the following:
commit cf98aa638a05a78818a4ba3d5284bdc0f5b10f11
Author: Puxuan He <puxuanhe@gmail.com>
Date:   Sat Feb 4 23:31:14 2017 -0600

    add nav links

commit d53a98a4ec6e2ee89590ace551410630aba321c7
Author: Puxuan He <phe@expedia.com>
Date:   Sat Feb 4 20:37:41 2017 -0600

    add firebase api.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
     <meta name="mobile-web-app-capable" content="yes">
     <link rel="icon" sizes="256x256" href="icons/icon_256.png">
     <title>Hacker News</title>
+    <style type="text/css">
+      @media (max-width: 550px) {
+        .hide-on-sm {
+          display: none;
+        }
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
